# disguise

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
examples/: docker-workflow.md  git-automation.md  kubernetes-management.md  node-development.md  python-environments.md  swiss-army-knife.md
src/: lib.rs  main.rs
src/commands/: add.rs  completions.rs  detail.rs  export.rs  history.rs  import.rs  list.rs  mod.rs  remove.rs  run.rs  tag.rs  update.rs
src/core/: config.rs  history.rs  mod.rs  script.rs
src/storage/: fs.rs  mod.rs
src/ui/: prompts.rs
